docs/envoy/v1.37.6/_sources/api-v3/extensions/filters/common/set_filter_state/v3/value.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/common/set_filter_state/v3/value.proto:

Set-Filter-State filter state value (proto)
===========================================






.. _envoy_v3_api_msg_extensions.filters.common.set_filter_state.v3.FilterStateValue:

extensions.filters.common.set_filter_state.v3.FilterStateValue
--------------------------------------------------------------


:repo:`[extensions.filters.common.set_filter_state.v3.FilterStateValue proto] <api/envoy/extensions/filters/common/set_filter_state/v3/value.proto#L19>`

A filter state key and value pair.



.. code-block:: json
  :force:

  {
    "object_key": ...,
    "factory_key": ...,
    "format_string": {...},
    "read_only": ...,
    "shared_with_upstream": ...,
    "skip_if_empty": ...
  }

.. _envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.object_key:


object_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name under which the filter state object will be stored and can be retrieved.

  When using :ref:`well-known filter state keys <well_known_filter_state>` (e.g.,
  ``envoy.network.upstream_server_name``, ``envoy.tcp_proxy.cluster``), the object key serves
  dual purpose where it identifies both where the data is stored and which factory creates the
  object. In this case, :ref:`factory_key
  <envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.factory_key>`
  is not needed.

  When using a custom key name which is not from the well-known list, you must also specify
  :ref:`factory_key
  <envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.factory_key>`
  to indicate which factory should create the object from your value.

  Example using a well-known key where ``factory_key`` is not needed:

  .. code-block:: yaml

     object_key: envoy.tcp_proxy.cluster
     format_string:
       text_format_source:
         inline_string: "my-cluster"

  Example using a custom key which requires a ``factory_key``:

  .. code-block:: yaml

     object_key: my.custom.key
     factory_key: envoy.string
     format_string:
       text_format_source:
         inline_string: "my-value"



  

.. _envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.factory_key:


factory_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies which registered factory should be used to create the filter state object from the
  provided value. This field is required when :ref:`object_key
  <envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.object_key>`
  is a custom name not found in the :ref:`well-known filter state keys <well_known_filter_state>`.

  Each well-known key has a factory registered with the same name (e.g., the key
  ``envoy.tcp_proxy.cluster`` has a factory also named ``envoy.tcp_proxy.cluster``). For custom keys,
  use one of the following generic factories:

  * ``envoy.string``: Creates a generic string object. Use this for arbitrary string values that
    will be accessed via ``StringAccessor``.

  If not specified, defaults to the value of ``object_key``.


.. _envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.format_string:


format_string
  (:ref:`config.core.v3.SubstitutionFormatString <envoy_v3_api_msg_config.core.v3.SubstitutionFormatString>`, *REQUIRED*) Uses the :ref:`format string <config_access_log_format_strings>` to
  instantiate the filter state object value.


  

.. _envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.read_only:


read_only
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If marked as read-only, the filter state key value is locked, and cannot
  be overridden by any filter, including this filter.


.. _envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.shared_with_upstream:


shared_with_upstream
  (:ref:`extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream <envoy_v3_api_enum_extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream>`) Configures the object to be shared with the upstream internal connections. See :ref:`internal upstream
  transport <config_internal_upstream_transport>` for more details on the filter state sharing with
  the internal connections.


.. _envoy_v3_api_field_extensions.filters.common.set_filter_state.v3.FilterStateValue.skip_if_empty:


skip_if_empty
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Skip the update if the value evaluates to an empty string.
  This option can be used to supply multiple alternatives for the same filter state object key.


.. _envoy_v3_api_enum_extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream:

Enum extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream
--------------------------------------------------------------------------------------


:repo:`[extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream proto] <api/envoy/extensions/filters/common/set_filter_state/v3/value.proto#L20>`




.. _envoy_v3_api_enum_value_extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream.NONE:


NONE
  *(DEFAULT)* ⁣Object is not shared with the upstream internal connections.


.. _envoy_v3_api_enum_value_extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream.ONCE:


ONCE
  ⁣Object is shared with the upstream internal connection.


.. _envoy_v3_api_enum_value_extensions.filters.common.set_filter_state.v3.FilterStateValue.SharedWithUpstream.TRANSITIVE:


TRANSITIVE
  ⁣Object is shared with the upstream internal connection and any internal connection upstream from it.



